@startuml
left to right direction
hide methods
skinparam classFontSize 20
skinparam padding 4
skinparam ranksep 150

class HealthcareCenter{
}

class Report

class CenterCoordinator{
}

class Company{
designation
}

class Administrator

class Vaccine{
Id
Name
Brand
Vaccine Type
Age Group
Dose Number
Vaccine Dosage
Time Since Last Dose
}


class VaccineSchedule{
date
time
userNumber
vaccinationCenter
scheduleVerification
}

class Receptionist


class SNSUser{
name
address
gender
phoneNumber
birthDate
emailAddress
snsUserNumber
citizenCardNumber
}

class Notification

class SMSNotification

class EmailNotification

class Report

class VaccineAdministration{
designation
ageGroup
}

class Nurse


class RecoveryRoom{
listUsers
}


class CommunityCenter{
}

class VaccinationCenter{
name
phoneNumber
faxNumber
homeAddress
emailAddress
websiteAddress
openingHours
closingHours
slotDuration
maxNumVaccinesPerSlot
}

class VaccineType{
code
designation
vaccineTechnology
}

class VaccinationCertificate

class WaitingRoom

class Employee{
name
phoneNumber
address
emailAddress
citizenCardNumber
companyID
}

Employee <|-down- Nurse
Employee <|-down- Receptionist
Employee <|-up- CenterCoordinator

Company "1" -up-- "*" VaccinationCenter : manages >
Company "1" -down-- "*" VaccineType : administers >

VaccinationCenter <|-up- HealthcareCenter
VaccinationCenter <|-- CommunityCenter
VaccinationCenter "1" -down-- "*"Vaccine : applies >
VaccinationCenter "1" -up-- "*" Report : reports >
VaccinationCenter "1"--"*" VaccineType : has >

Vaccine "1" --"*" Dosage
Vaccine "*" -down--- "1" VaccineType : is >
Vaccine "1" -down-- "*" VaccineAdministration : of <
Vaccine "*" -down-- "1" SNSUser : > administrated on
VaccinationCenter "0..1" -right- "0..1" VaccineSchedule : > fulfilling
VaccineType "1" -- "*" Vaccine : has >

VaccineAdministration "1" -up- "*" Nurse : executed by >
VaccineAdministration "1" -down- "1" VaccinationCenter

HealthcareCenter "*" -down- "*" VaccineType : can administer >
CommunityCenter "*" -right- "1" VaccineType : can administer >


CenterCoordinator "1" -left- "1" VaccinationCenter : coordinates >
CenterCoordinator "*" --- "*" Report : analyses >

Administrator "1" -right- "*" Employee : registers and configures >
Administrator "1" -right- "*" VaccinationCenter : registers and configures >
Administrator "1" -down- "*" SNSUser : registers and configures >

SNSUser "1" -right-- "1" VaccinationCertificate : requests >
SNSUser "1" -left- "1" VaccineAdministration

VaccinationCertificate "1"--"1" VaccineType
VaccinationCertificate "1"--"1" VaccineAdministration

VaccineSchedule "*" -down-- "1" SNSUser : made for >
VaccineSchedule "1" -up-- "0..1" VaccineType : administers >
VaccineSchedule "0" -- "1" VaccineAdministration : has >

Receptionist "*" -down-- "*" SNSUser : registers arrival of >
Receptionist "*" -down--- "*" VaccineSchedule : confirms >
Receptionist "1..*"-right-- "1..*"WaitingRoom : sends SNS user to >

Nurse "*" -down- "1..*" WaitingRoom : consults users in >
(Nurse, WaitingRoom) .. UserHealthHistoric
Nurse "1" -up-- "*" VaccinationCertificate : issues and delivers >
VaccineAdministration "*" -down-- "1" RecoveryRoom : sends user to >
VaccineAdministration -up-- WaitingRoom : sends users to >

VaccineSchedule "1" -up-- "0..1" Notification : emits >

Notification <|-- SMSNotification
Notification <|-- EmailNotification
@enduml